# fedora

./: .gitignore  CMakeLists.txt  try.txt
.devcontainer/: Dockerfile  devcontainer.json
Fedora/: Fedora.cpp  Fedora.sln  Fedora.vcxproj  Fedora.vcxproj.filters
Fedora/Headers/: Analyzer.h  FException.h  KeyWords.h  Parser.h  Runtime.h  StaticUtils.h  Token.h  TokensHolder.h
Fedora/Headers/Analyzers/: AnalyticBasic.h  AnalyticUtils.h  AnalyzerStrategy.h  ReadAfterListEnd.h  ReadAfterReturnableFunName.h  ReadForceArgs.h  ReadForceName.h  ReadFunArgs.h  ReadKeyWord.h  ReadList.h  ReadName.h  ReadResult.h
Fedora/Headers/Builder/: BuildableForceCall.h  BuildableFunCall.h  BuildableFunction.h  ContextBuilder.h  ForceCallDeclarator.h  FunCallDeclarator.h  FunctionDeclarator.h  MutableList.h
Fedora/Headers/Context/: ContextualComplement.h  Package.h
Fedora/Headers/Context/ForceCall/: ForceCall.h
Fedora/Headers/Context/Function/: Arguments.h  BasicFunction.h  BuiltinFunction.h  Context.h  FeFunction.h  Function.h  FunctionCall.h  FunctionRelation.h  Returnable.h
Fedora/Headers/Context/Function/Returnable/: Returnable.h  ReturnableNumber.h
Fedora/Headers/Exceptions/: AnalyzerException.h  BuilderException.h  FException.h  ParserException.h  SettingsException.h  Utf8istreamException.h
Fedora/Headers/ForceCall/: ForceArgs.h  ForceCall.h
Fedora/Headers/Function/: Arguments.h  BasicFunction.h  Context.h  FunCall.h  Function.h  FunctionCall.h  Returnable.h
Fedora/Headers/Function/Returnable/: Returnable.h  ReturnableNumber.h
Fedora/Headers/Parser/: Parser.h  ParserUtils.h  Token.h  TokenPriority.h  TokenType.h  TokensHolder.h  Utf8istream.h
Fedora/Headers/Stack/: StackHolder.h
Fedora/Headers/Stack/ForceCall/: ForceArgs.h  ForceCall.h
Fedora/Headers/Types/: BasicType.h  BindedFunCall.h  FunCall.h  List.h  Null.h  Number.h  String.h  Type.h  UnbindedFunCall.h
Fedora/Headers/Utils/: BasicSingleton.h  Logger.h  SettingsSingleton.h  SingletonsCleaner.h  TokensHolder.h
Fedora/Source/: Analyzer.cpp  KeyWords.cpp  Parser.cpp  StaticUtils.cpp  String.cpp  Token.cpp
Fedora/Source/Analyzers/: AnalyticBasic.cpp  AnalyticUtils.cpp  AnalyzerStrategy.cpp  ReadAfterListEnd.cpp  ReadAfterReturnableFunName.cpp  ReadForceArgs.cpp  ReadForceName.cpp  ReadFunArgs.cpp  ReadKeyWord.cpp  ReadList.cpp  ReadName.cpp  ReadResult.cpp
Fedora/Source/Builder/: ContextBuilder.cpp
Fedora/Source/Context/: ContextualComplement.cpp
Fedora/Source/Context/Function/: BuiltinFunction.cpp  FeFunction.cpp  Function.cpp
Fedora/Source/Exceptions/: FException.cpp
Fedora/Source/Parser/: Parser.cpp  ParserUtils.cpp  Token.cpp  TokensHolder.cpp  Utf8istream.cpp
Fedora/Source/Stack/: StackHolder.cpp
Fedora/Source/Types/: BindedFunCall.cpp  FunCall.cpp  Funcall.cpp  List.cpp  Null.cpp  Number.cpp  String.cpp  UnbindedFunCall.cpp
Fedora/Source/Utils/: BasicSingleton.cpp  Logger.cpp  SettingsSingleton.cpp  SingletonsCleaner.cpp  TokensHolder.cpp
Fedora/test/: Test.h  TestParser.h
docs & examples/: Specificaion.md  fedora find arr.txt  fedora.txt  fibonacci.fe
docs & examples/1.0/: fedora.ebnf  try.txt  УИТА.txt
docs & examples/2.0/: A*.fe  fedora2.0.fe  substring.fe
programs/: basic_types.fe  current_features.fe  fibonacci.fe  find.fe  tokensTest.fe
scripts/: updateCMake.py
yacc/: yacc.py
